[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offseckit-hash"
version = "0.1.0"
description = "Hash identifier & generator CLI — identify hash types and generate MD5, SHA1, SHA256, SHA512, NTLM, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "OffSecKit", email = "dev@offseckit.com" }]
keywords = [
    "hash",
    "hash-identifier",
    "md5",
    "sha256",
    "ntlm",
    "pentesting",
    "offensive-security",
    "red-team",
    "bug-bounty",
    "hacking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["click>=8.0"]

[project.scripts]
hash = "hash.cli:main"

[project.urls]
Homepage = "https://offseckit.com/tools/hash"
Repository = "https://github.com/offseckit/hash"
